# LBP_2025_robot_control

./: LICENSE  README.md  pyproject.toml  taught_positions.txt  teaching.py  tutorial.md
.cache/calibration/koch/: main_follower.json
examples/: test_position_mode.py  test_velocity_mode.py
src/lbp_2025_robot_control/: calibration.py  config.py  configure_motor.py  dynamixel.py  find_motors_bus_port.py  manipulator.py  utils.py
